--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,23 @@
             <artifactId>javax.persistence</artifactId>
             <version>2.1.0</version>
         </dependency>
+        
+
+        <dependency>
+                <groupId>org.primefaces.themes</groupId>
+                <artifactId>all-themes</artifactId>
+                <version>1.0.10</version>
+        </dependency>
+        
  </dependencies>
+ 
+ <repositories>
+        <repository>
+            <id>prime-repo</id>
+            <name>Prime Repo</name>
+            <url>http://repository.primefaces.org</url>
+        </repository>
+        </repositories>
     <build>
         <plugins>
             <plugin>
